# o2a

./: .gitignore  AGENTS.md  README-CN.md  README.md  pyproject.toml
doc/: api_migration.md
oai2ant/: __init__.py  cli.py
oai2ant/config/: settings.example.json
oai2ant/proxy/: main.py  models.py  runtime.py
oai2ant/proxy/providers/: openai.py
oai2ant/proxy/translators/: anthropic.py
proxy/: config_manager.py  main.py  runtime.py
proxy/translators/: anthropic.py
scripts/: check_config.py
tests/proxy/: test_config_manager.py  test_translators.py
ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/pages/: ConfigPage.tsx  TestChatPage.tsx
ui/src/services/: api.ts
ui/src/styles/: base.css
